--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,16 @@ org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.10
+
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
 loader_version=0.17.3
-loom_version=1.12-SNAPSHOT
+loom_version=1.13-SNAPSHOT
+
+# Fabric API
+fabric_version=0.83.0+1.20
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
-
-# Dependencies
-fabric_version=0.136.0+1.21.10
+maven_group=fr.madu59
+archives_base_name=emojis
